third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_field_field_invalid.exp

Diagnostics:
error: cannot immutable borrow local `inner` since other mutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_field_field_invalid.move:14:19
   │
13 │         let c = &mut inner.f1;
   │                      -------- previous mutable field borrow
14 │         let f1 = &inner.f1;
   │                   ^^^^^^^^ immutable borrow attempted here

error: cannot immutable borrow local `inner` since other mutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_field_field_invalid.move:21:19
   │
20 │         let c = id_mut(&mut inner.f1);
   │                             -------- previous mutable field borrow
21 │         let f1 = &inner.f1;
   │                   ^^^^^^^^ immutable borrow attempted here
